retired/hyrax_tests/errors/NoSuchVariable.dap
url = http://localhost:8080/opendap/data/nc/fnoc1.nc.dap?dap4.ce=k
-s 
